--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -238,8 +238,69 @@ marine macrophytes: the seagrass \emph{Cymodocea nodosa} and the alga
 efficiency of the protocol and the suitability of obtained DNA and
 proteins for 16S rRNA sequencing and metaproteomics.
 
+\newpage
+
 \hypertarget{results}{%
 \subsection{Results}\label{results}}
+
+To assess the removal efficiency of DNA and protein isolation procedures
+leaves and thalli were stained with SYBR Green I and examined under a
+confocal microscope before and after treatments were performed. As it is
+known that marine macrophytes are harboring more algal epiphytes during
+Autumn and Winter months (Reyes and Sansón, 2001), the sampling was
+performed in two contrasting seasons, in December 2017 when higher
+abundances of algal epiphytes are expected, and in June 2018, when lower
+abundances could be expected. In addition, to further test the isolation
+protocols on different macrophyte species, DNA and proteins were
+isolated from the surfaces of two macrophytes, the seagrass \emph{C.
+nodosa} and the macroalga \emph{C. cylindracea}. \emph{C. nodosa} was
+sampled in a monospecific meadow (Bay of Saline) and \emph{C.
+cylindracea} invaded meadow (Bay of Funtana), while samples of \emph{C.
+cylindracea} originated from a monospecific settlement and a \emph{C.
+cylindracea} invaded \emph{C. nodosa} meadow in the Bay of Funtana.
+\emph{C. nodosa} June samples from the Bay of Saline were missing as the
+meadow went to a decline from Spring 2018 (M. Najdek, personal
+communication). Procedures developed for DNA and protein isolation
+showed an almost complete removal of the surface community on both,
+samples collected in December 2017 (\autoref{confocal_december}) and
+June 2018 (\autoref{confocal_june}). In addition, a similar removal
+efficiency was observed for communities associated with \emph{C. nodosa}
+and \emph{C. cylindracea}. Also, no effect of station, settlement or
+isolation procedure (DNA or protein) on the removal efficiency was
+observed (Figs. \ref{confocal_december} and \ref{confocal_june}).
+
+To evaluate if the obtained DNA is suitable to determine the microbial
+community structure an Illumina sequencing of the V4 16S rRNA region was
+performed. Sequencing yielded a total of 336,937 sequences after quality
+curation and exclusion of eukaryotic, mitochondrial and no relative
+sequences. The number of sequences classified as chloroplast was 97,328
+(28.9 \si{\percent})˛ After the exclusion of these sequences the total
+number of retrieved reads dropped to 239,609, ranging from 22,587 and
+52,958 sequences per sample (\autoref{supp-nseq_notus}). Even when the
+highest sequencing effort was applied the rarefaction curves did not
+level off that is commonly observed in high-throughput 16S rRNA amplicon
+sequencing procedures (\autoref{supp-rarefaction}). Sequence clustering
+at a similarity level of 97 \si{\percent} yielded a total of 8,360
+different OTUs. Taxonomic classification of reads allowed the
+determination of the macrophyte associated epiphytic community that was
+mainly composed of: \emph{Alphaproteobacteria} (14.9 ± 3.5
+\si{\percent}), \emph{Bacteroidota} (12.5 ± 2.4 \si{\percent}),
+\emph{Gammaproteobacteria} (11.6 ± 4.3 \si{\percent}),
+\emph{Desulfobacterota} (7.8 ± 7.4 \si{\percent}), \emph{Cyanobacteria}
+(6.5 ± 4.7 \si{\percent}) and \emph{Planctomycetota} (2.9 ± 1.7
+\si{\percent}) (\autoref{community}).
+
+Primers used in this study, as in many other 16S rRNA amplicon
+procedures, also amplify chloroplast 16S rRNA genes. We observed a high
+proportion of chloroplast sequences in all analyzed samples (33.4 ± 9.4
+\si{\percent}) (\autoref{community}). To determine if chloroplast
+sequences originate from hosts or eukaryotic epiphytic organisms, we
+exported SILVA classified chloroplast sequences and reclassified them
+using the RDP (Ribosomal Database Project) training set that allows for
+a more detailed chloroplast classification. The largest proportion of
+sequences was classified as Bacillariophyta (89.7 ± 5.7 \si{\percent})
+indicating that the DNA removal procedure did not coextract larger
+quantities of host DNA (\autoref{chloroplast}).
 
 \hypertarget{discussion}{%
 \subsection{Discussion}\label{discussion}}
@@ -252,24 +313,24 @@ proteins for 16S rRNA sequencing and metaproteomics.
 \hypertarget{sampling}{%
 \subsubsection{Sampling}\label{sampling}}
 
-Leaves of \emph{Cymodocea nodosa} were sampled in a \emph{Cymodocea
-nodosa} meadow in the Bay of Saline (\ang{45;7;5} N, \ang{13;37;20} E)
-and in a \emph{Cymodocea nodosa} meadow invaded by \emph{Caulerpa
-cylindracea} in the proximity of the village of Funtana (\ang{45;10;39}
-N, \ang{13;35;42} E). Thalli of \emph{Caulerpa cylindracea} were sampled
-in the same \emph{Cymodocea nodosa} invaded meadow in Funtana and on a
-locality of only \emph{Caulerpa cylindracea} located in the proximity of
-the invaded meadow. Leaves and thalli were collected on the same day in
-two contrasting seasons, on 4 December 2017 and 18 June 2018. During
-spring 2018 the \emph{Cymodocea nodosa} meadow in the Bay of Saline
-decayed to an extent that no leaves could be retrieved (Najdek \emph{et
-al.}, unpublished data). Leaves and thalli were collected by diving and
-transported to the laboratory in containers placed on ice and filled
-with site seawater. Upon arrival to the laboratory, \emph{Cymodocea
-nodosa} leaves were cut into sections of 1 -- 2 \si{\cm}, while
-\emph{Caulerpa cylindracea} thalli were cut into 5 -- 8 \si{\cm} long
-sections. Leaves and thalli were washed three times with sterile
-artificial seawater (ASW) to remove loosely attached microbial cells.
+Leaves of \emph{C. nodosa} were sampled in a \emph{C. nodosa} meadow in
+the Bay of Saline (\ang{45;7;5} N, \ang{13;37;20} E) and in a \emph{C.
+nodosa} meadow invaded by \emph{C. cylindracea} in the proximity of the
+village of Funtana (\ang{45;10;39} N, \ang{13;35;42} E). Thalli of
+\emph{C. cylindracea} were sampled in the same \emph{C. nodosa} invaded
+meadow in Funtana and on a locality of only \emph{C. cylindracea}
+located in the proximity of the invaded meadow. Leaves and thalli were
+collected on the same day in two contrasting seasons, on 4 December 2017
+and 18 June 2018. During spring 2018 the \emph{C. nodosa} meadow in the
+Bay of Saline decayed to an extent that no leaves could be retrieved
+(Najdek \emph{et al.}, unpublished data). Leaves and thalli were
+collected by diving and transported to the laboratory in containers
+placed on ice and filled with site seawater. Upon arrival to the
+laboratory, \emph{C. nodosa} leaves were cut into sections of 1 -- 2
+\si{\cm}, while \emph{C. cylindracea} thalli were cut into 5 -- 8
+\si{\cm} long sections. Leaves and thalli were washed three times with
+sterile artificial seawater (ASW) to remove loosely attached microbial
+cells.
 
 \hypertarget{dna-isolation}{%
 \subsubsection{DNA isolation}\label{dna-isolation}}
@@ -363,17 +424,17 @@ reproducibility (\url{http://www.riffomonas.org/}). For alignment and
 classification of sequences the SILVA SSU Ref NR 99 database (release
 138; \url{http://www.arb-silva.de}) was used (Quast \emph{et al.}, 2013;
 Yilmaz \emph{et al.}, 2014). Sequences classified as chloroplasts by
-SILVA were exported and reclassifed using mothur and the RDP (Ribosomal
-Database Project; \url{http://rdp.cme.msu.edu/}) training set (version
-16) reference files adapted for mothur (Cole \emph{et al.}, 2014). In
-comparison to SILVA, RDP allows a more detailed classification of
-chloroplast sequences. Pipeline data processing and visualization was
-done using R (version 3.6.0) (R Core Team, 2019), package tidyverse
-(version 1.3.0) (Wickham \emph{et al.}, 2019) and multiple other
-packages (Xie, 2014, 2015, 2019b, 2019a, 2020; Neuwirth, 2014; Xie
-\emph{et al.}, 2018; Allaire \emph{et al.}, 2019; Zhu, 2019). The
-detailed analysis procedure including the R Markdown file for this paper
-are available as a GitHub repository
+SILVA were exported and reclassifed using mothur and the RDP
+(\url{http://rdp.cme.msu.edu/}) training set (version 16) reference
+files adapted for mothur (Cole \emph{et al.}, 2014). In comparison to
+SILVA, RDP allows a more detailed classification of chloroplast
+sequences. Pipeline data processing and visualization was done using R
+(version 3.6.0) (R Core Team, 2019), package tidyverse (version 1.3.0)
+(Wickham \emph{et al.}, 2019) and multiple other packages (Xie, 2014,
+2015, 2019b, 2019a, 2020; Neuwirth, 2014; Xie \emph{et al.}, 2018;
+Allaire \emph{et al.}, 2019; Zhu, 2019; Bengtsson, 2020). The detailed
+analysis procedure including the R Markdown file for this paper are
+available as a GitHub repository
 (\url{https://github.com/mkorlevic/Korlevic_SelectiveRemoval_EnvironMicrobiol_2020}).
 Based on the ATCC MSA-1002 mock community included in the analysis a
 sequencing error rate of 0.009 \si{\percent} was determined, which is in
@@ -485,6 +546,10 @@ Apprill, A., McNally, S., Parsons, R., and Weber, L. (2015) Minor
 revision to V4 region SSU rRNA 806R gene primer greatly increases
 detection of SAR11 bacterioplankton. \emph{Aquat Microb Ecol}
 \textbf{75}: 129--137.
+
+\leavevmode\hypertarget{ref-Bengtsson2020}{}%
+Bengtsson, H. (2020) MatrixStats: Functions that apply to rows and
+columns of matrices (and to vectors).
 
 \leavevmode\hypertarget{ref-Burke2009}{}%
 Burke, C., Kjelleberg, S., and Thomas, T. (2009) Selective extraction of
@@ -598,6 +663,11 @@ data processing and web-based tools. \emph{Nucleic Acids Res}
 R Core Team (2019) A language and environment for statistical computing,
 Vienna, Austria: R Foundation for Statistical Computing.
 
+\leavevmode\hypertarget{ref-Reyes2001}{}%
+Reyes, J. and Sansón, M. (2001) Biomass and production of the epiphytes
+on the leaves of \emph{Cymodocea nodosa} in the Canary Islands.
+\emph{Bot Mar} \textbf{44}: 307--313.
+
 \leavevmode\hypertarget{ref-Richter-Heitmann2016}{}%
 Richter-Heitmann, T., Eickhorst, T., Knauth, S., Friedrich, M.W., and
 Schmidt, H. (2016) Evaluation of strategies to separate root-associated
@@ -691,9 +761,9 @@ syntax.
 \hypertarget{figure-captions}{%
 \subsection{Figure Captions}\label{figure-captions}}
 
-\textbf{\autoref{micro_dec}.} \nameref{micro_dec}
+\textbf{\autoref{confocal_december}.} \nameref{confocal_december}
 
-\textbf{\autoref{micro_jun}.} \nameref{micro_jun}
+\textbf{\autoref{confocal_june}.} \nameref{confocal_june}
 
 \textbf{\autoref{community}.} \nameref{community}
 
@@ -710,7 +780,7 @@ syntax.
 
 }
 
-\caption{Confocal microscope images of \textit{C. nodosa} and \textit{C. cylindracea} surfaces from the Bay of Saline and the Bay of Funtana (Mixed and Monospecific Settlements) sampled on 4 December 2017 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{micro_dec}}\label{fig:unnamed-chunk-2}
+\caption{Confocal microscope images of \textit{C. nodosa} and \textit{C. cylindracea} surfaces from the Bay of Saline and the Bay of Funtana (Mixed and Monospecific Settlements) sampled on 4 December 2017 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{confocal_december}}\label{fig:unnamed-chunk-2}
 \end{figure}
 
 \newpage
@@ -720,7 +790,7 @@ syntax.
 
 }
 
-\caption{Confocal microscope images of \textit{C. nodosa} and \textit{C. cylindracea} surfaces from the Bay of Funtana (Mixed and Monospecific Settlements) sampled on 19 June 2018 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{micro_jun}}\label{fig:unnamed-chunk-3}
+\caption{Confocal microscope images of \textit{C. nodosa} and \textit{C. cylindracea} surfaces from the Bay of Funtana (Mixed and Monospecific Settlements) sampled on 19 June 2018 and stained with SYBR Green I. Scale bar in all images is 60 \si{\um}.\label{confocal_june}}\label{fig:unnamed-chunk-3}
 \end{figure}
 
 \newpage
