--- a/submission/references.bib
+++ b/submission/references.bib
@@ -1,6 +1,6 @@
 
 @software{Allaire2019,
-  title = {Rmarkdown: Dynamic Documents for {{R}}},
+  title = {{{rmarkdown}}: Dynamic Documents for {{R}}},
   author = {Allaire, J J and Xie, Yihui and McPherson, Jonathan and Luraschi, Javier and Ushey, Kevin and Atkins, Aron and Wickham, Hadley and Cheng, Joe and Chang, Winston and Iannone, Richard},
   date = {2019},
   url = {https://github.com/rstudio/rmarkdown}
@@ -17,6 +17,7 @@
   url = {http://www.ncbi.nlm.nih.gov/pubmed/7535888 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC239358},
   eprint = {7535888},
   eprinttype = {pmid},
+  issue = {1},
   number = {1}
 }
 
@@ -31,6 +32,7 @@
   url = {http://www.nature.com/articles/ismej2009108},
   eprint = {19829318},
   eprinttype = {pmid},
+  issue = {2},
   number = {2}
 }
 
@@ -44,7 +46,15 @@
   issn = {0948-3055},
   doi = {10.3354/ame01753},
   url = {http://www.int-res.com/abstracts/ame/v75/n2/p129-137/},
+  issue = {2},
   number = {2}
+}
+
+@software{Bengtsson2020,
+  title = {{{MatrixStats}}: Functions That Apply to Rows and Columns of Matrices (and to Vectors)},
+  author = {Bengtsson, Henrik},
+  date = {2020},
+  url = {https://CRAN.R-project.org/package=matrixStats}
 }
 
 @article{Burke2009,
@@ -58,6 +68,7 @@
   url = {http://aem.asm.org/cgi/doi/10.1128/AEM.01630-08},
   eprint = {18978081},
   eprinttype = {pmid},
+  issue = {1},
   number = {1}
 }
 
@@ -71,6 +82,7 @@
   issn = {00278424},
   doi = {10.1073/pnas.1101591108},
   url = {http://www.pnas.org/cgi/doi/10.1073/pnas.1101591108},
+  issue = {34},
   keywords = {Biofilm,Ecological model,Lateral gene transfer},
   number = {34}
 }
@@ -87,6 +99,7 @@
   url = {http://www.nature.com/articles/ismej2010164 http://www.ncbi.nlm.nih.gov/pubmed/21048801 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3105733},
   eprint = {21048801},
   eprinttype = {pmid},
+  issue = {4},
   number = {4}
 }
 
@@ -101,6 +114,7 @@
   url = {http://doi.wiley.com/10.1002/jobm.201300041},
   eprint = {23696300},
   eprinttype = {pmid},
+  issue = {7},
   number = {7}
 }
 
@@ -116,6 +130,7 @@
   url = {http://www.ncbi.nlm.nih.gov/pubmed/22402401 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3400413 http://www.nature.com/articles/ismej20128},
   eprint = {22402401},
   eprinttype = {pmid},
+  issue = {8},
   number = {8}
 }
 
@@ -129,6 +144,7 @@
   issn = {1535-3893},
   doi = {10.1021/pr100787q},
   url = {http://pubs.acs.org/doi/abs/10.1021/pr100787q},
+  issue = {12},
   number = {12}
 }
 
@@ -146,8 +162,8 @@
   urldate = {2020-04-15},
   eprint = {24288368},
   eprinttype = {pmid},
-  file = {/home/marino/Zotero/storage/CR36ZK7U/Cole et al. - 2014 - Ribosomal Database Project data and tools for hig.pdf},
   issue = {Database issue},
+  number = {Database issue},
   pmcid = {PMC3965039}
 }
 
@@ -162,6 +178,7 @@
   url = {https://academic.oup.com/femsre/article-lookup/doi/10.1111/1574-6976.12011},
   eprint = {23157386},
   eprinttype = {pmid},
+  issue = {3},
   number = {3}
 }
 
@@ -177,6 +194,7 @@
   url = {http://www.ncbi.nlm.nih.gov/pubmed/19659500 http://doi.wiley.com/10.1111/j.1462-2920.2009.02017.x},
   eprint = {19659500},
   eprinttype = {pmid},
+  issue = {12},
   number = {12}
 }
 
@@ -191,6 +209,7 @@
   issn = {0018-8158},
   doi = {10.1023/B:HYDR.0000008538.68268.82},
   url = {http://link.springer.com/10.1023/B:HYDR.0000008538.68268.82},
+  issue = {1-3},
   number = {1-3}
 }
 
@@ -205,6 +224,7 @@
   url = {http://www.nature.com/articles/nature14238},
   eprint = {25739499},
   eprinttype = {pmid},
+  issue = {7551},
   number = {7551}
 }
 
@@ -220,6 +240,7 @@
   url = {http://link.springer.com/10.1007/s10646-015-1511-z http://www.ncbi.nlm.nih.gov/pubmed/26092035},
   eprint = {26092035},
   eprinttype = {pmid},
+  issue = {7-8},
   keywords = {Cyanobacteria,Microbial communities,South China Sea,Thalassia hemprichii,Xincun Bay,α-Proteobacteria},
   number = {7-8}
 }
@@ -235,6 +256,7 @@
   url = {http://aem.asm.org/lookup/doi/10.1128/AEM.01043-13},
   eprint = {23793624},
   eprinttype = {pmid},
+  issue = {17},
   number = {17}
 }
 
@@ -249,6 +271,7 @@
   issn = {0948-3055},
   doi = {10.3354/ame048217},
   url = {http://www.int-res.com/abstracts/ame/v48/n3/p217-229/},
+  issue = {3},
   keywords = {Bacterial communities,Diversity,Host organisms,Macroalga,Marine,Sponge},
   number = {3}
 }
@@ -262,6 +285,7 @@
   pages = {50--56},
   eprint = {8979338},
   eprinttype = {pmid},
+  issue = {1},
   number = {1}
 }
 
@@ -283,6 +307,7 @@
   issn = {1386-2588},
   doi = {10.1007/s10452-009-9249-4},
   url = {http://link.springer.com/10.1007/s10452-009-9249-4},
+  issue = {1},
   number = {1}
 }
 
@@ -298,6 +323,7 @@
   url = {http://www.ncbi.nlm.nih.gov/pubmed/26271760 http://doi.wiley.com/10.1111/1462-2920.13023},
   eprint = {26271760},
   eprinttype = {pmid},
+  issue = {5},
   number = {5}
 }
 
@@ -313,16 +339,31 @@
   url = {http://academic.oup.com/nar/article/41/D1/D590/1069277/The-SILVA-ribosomal-RNA-gene-database-project http://www.ncbi.nlm.nih.gov/pubmed/23193283 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3531112},
   eprint = {23193283},
   eprinttype = {pmid},
-  issue = {Database issue}
+  issue = {Database issue},
+  number = {Database issue}
 }
 
 @software{RCoreTeam2019,
-  title = {A Language and Environment for Statistical Computing},
+  title = {R: {{A}} Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   date = {2019},
   location = {{Vienna, Austria}},
   url = {https://www.r-project.org/},
   organization = {{R Foundation for Statistical Computing}}
+}
+
+@article{Reyes2001,
+  title = {Biomass and Production of the Epiphytes on the Leaves of {{{\emph{Cymodocea nodosa}}}} in the {{Canary Islands}}},
+  author = {Reyes, J. and Sans\'on, M.},
+  date = {2001-08},
+  journaltitle = {Bot. Mar.},
+  volume = {44},
+  pages = {307--313},
+  publisher = {{Walter de Gruyter}},
+  issn = {00068055},
+  doi = {10.1515/BOT.2001.039},
+  issue = {4},
+  number = {4}
 }
 
 @article{Richter-Heitmann2016,
@@ -350,6 +391,7 @@
   url = {http://aem.asm.org/cgi/doi/10.1128/AEM.01541-09},
   eprint = {19801464},
   eprinttype = {pmid},
+  issue = {23},
   number = {23}
 }
 
@@ -379,6 +421,7 @@
   url = {http://mbio.asm.org/lookup/doi/10.1128/mBio.00201-16},
   eprint = {27190214},
   eprinttype = {pmid},
+  issue = {3},
   number = {3}
 }
 
@@ -394,6 +437,7 @@
   url = {http://www.ncbi.nlm.nih.gov/pubmed/18328081 https://academic.oup.com/femsec/article-lookup/doi/10.1111/j.1574-6941.2008.00445.x},
   eprint = {18328081},
   eprinttype = {pmid},
+  issue = {1},
   number = {1}
 }
 
@@ -409,6 +453,7 @@
   url = {http://link.springer.com/10.1007/s00253-011-3800-7 http://www.ncbi.nlm.nih.gov/pubmed/22189863},
   eprint = {22189863},
   eprinttype = {pmid},
+  issue = {3},
   number = {3}
 }
 
@@ -423,6 +468,7 @@
   issn = {00223646},
   doi = {10.1111/j.1529-8817.2007.00371.x},
   url = {http://doi.wiley.com/10.1111/j.1529-8817.2007.00371.x},
+  issue = {4},
   keywords = {Cyanobacteria,Diversity,Epiphytes,Nitrogen fixation,Phyllosphere,Seagrass},
   number = {4}
 }
@@ -437,6 +483,7 @@
   publisher = {{American Society for Microbiology (ASM)}},
   eprint = {8975607},
   eprinttype = {pmid},
+  issue = {3},
   number = {3}
 }
 
@@ -448,6 +495,7 @@
   volume = {4},
   pages = {1686},
   doi = {10.21105/joss.01686},
+  issue = {43},
   number = {43}
 }
 
@@ -463,11 +511,12 @@
   url = {http://www.ncbi.nlm.nih.gov/pubmed/19377485 http://www.nature.com/articles/nmeth.1322},
   eprint = {19377485},
   eprinttype = {pmid},
+  issue = {5},
   number = {5}
 }
 
 @incollection{Xie2014,
-  title = {Knitr: A Comprehensive Tool for Reproducible Research in {{R}}},
+  title = {{{ knitr}}: A Comprehensive Tool for Reproducible Research in {{R}}},
   booktitle = {Implementing {{Reproducible Computational Research}}},
   author = {Xie, Yihui},
   editor = {Stodden, Victoria and Leisch, Friedrich and Peng, Roger D},
@@ -499,7 +548,7 @@
 }
 
 @software{Xie2019,
-  title = {Knitr: A General-Purpose Package for Dynamic Report Generation in {{R}}},
+  title = {{{knitr}}: A General-Purpose Package for Dynamic Report Generation in {{R}}},
   author = {Xie, Yihui},
   date = {2019},
   url = {https://yihui.name/knitr/}
@@ -513,11 +562,12 @@
   volume = {40},
   pages = {30--32},
   url = {http://tug.org/TUGboat/Contents/contents40-1.html},
+  issue = {1},
   number = {1}
 }
 
 @software{Xie2020,
-  title = {{{TinyTex}}: Helper Functions to Install and Maintain '{{TeX Live}}', and Compile '{{LaTeX}}' Documents},
+  title = {{{tinytex}}: Helper Functions to Install and Maintain '{{TeX Live}}', and Compile '{{LaTeX}}' Documents},
   author = {Xie, Yihui},
   date = {2020},
   url = {https://github.com/yihui/tinytex}
@@ -535,11 +585,12 @@
   url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkt1209 http://www.ncbi.nlm.nih.gov/pubmed/24293649 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3965112},
   eprint = {24293649},
   eprinttype = {pmid},
+  issue = {D1},
   number = {D1}
 }
 
 @software{Zhu2019,
-  title = {{{KableExtra}}: Construct Complex Table with 'kable' and Pipe Syntax},
+  title = {{{kableExtra}}: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Zhu, Hao},
   date = {2019},
   url = {https://cran.r-project.org/package=kableExtra}
